# Racing-Game-2

./: .gitignore  CAPACITOR.md  CHANGELOG.md  GT4 Specs.xlsx  MIGRATION_PLAN.md  README.md  audiolab.html  build-standalone.ps1  capacitor.config.ts  driver_city_charlotte_v8_99_126_89.html  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.claude/: launch.json  settings.json
.github/workflows/: pages.yml
docs/: AUDIT-merge-2026-07-02.md  BLACKLIST.md  ROADSPEC.md  SESSION_HANDOFF.md  TERRAIN_ART_SPEC.md  TERRAIN_ART_SPEC_AUTOMODELLISTA.md
fixtures/: README.md  road-lab-v1.json  user-world-v1.json
fixtures/maps/: fit_summary.json  hw485.json  hw77.json  landmarks.json  minor.json  water.json  world_hw485.json  world_hw77.json  world_minor.json  world_minor_welded.json  world_water.json
public/: artspike.html  manifest.webmanifest
scripts/: auto-rebuild-exe.ps1  measureSprite.mjs  simplifyBaselineRoads.mjs
src/: gameLoop.ts  main.ts
src-tauri/: .gitignore  Cargo.toml  README.md  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/assets/: titleImage.ts
src/audio/: arcadeAudio.ts
src/audiolab/: main.ts
src/config/: blacklist.ts  calendar.ts  carLogos.ts  housing.ts  jobs.ts  names.ts  traffic.ts  version.ts
src/editor/: angleRef.ts  apply.ts  baseline.ts  delete.ts  draft.ts  export.ts  index.ts  input.ts  intersectionSchema.ts  parkingLayout.ts  rebuild.ts  render.ts  select.ts  snap.ts  span.ts  stamp.ts  storage.ts  ui.ts  undo.ts
src/engine/: diagKill.ts  particles.ts  tilt.ts  (+5 more)
(+398 files in other folders)
